Fix unnecessary spacing below code blocks

--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -33,6 +33,7 @@
       padding: 0 0.2em
     pre
       code
+        display: inline-table
         border: none
       &.terminal
         border: 1px solid #000
@@ -53,8 +54,6 @@
 
         &:first-child
           text-align: right
-
-        &:last-child
 
         img
           vertical-align: middle
